--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
 <body>
 	<div class="container">
 		<div class="profile-box">
-			<img src="images/menu.svg" class="menu-icon">
-			<img src="images/settings.svg" class="settings-icon">
-			<img src="images/user.png" class="profile-pic">
+			<img src="menu.svg" class="menu-icon">
+			<img src="settings.svg" class="settings-icon">
+			<img src="/user.png" class="profile-pic">
 			<h3>Your Name</h3>
 			<p>Your Occupation @ Company Name, <br>Your Location</p>
 			<div class="social-media">
-				<img src="images/instagram.png">
-				<img src="images/github.png">
-				<img src="images/facebook.png">
+				<img src="instagram.png">
+				<img src="github.png">
+				<img src="facebook.png">
 			</div>
 			<button type="button">Follow</button>
 			<div class="profile-bottom">
 				<p>Brief Introduction About<br> Yourself To The Audience.</p>
-				<img src="images/arrow-down-solid.svg">
+				<img src="arrow-down-solid.svg">
 			</div>
 		</div>
 	</div>
